style.css
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
*{
  font-family: "Poppins";
}
::-webkit-scrollbar {
  display: none;
}
.feature-container .feature-content {
  background-color: rgba(0, 0, 0, 0.7);
}
.feature-container .feature-content .navbar .container-fluid .navbar-toggler {
  border: none;
}
.feature-container
  .feature-content
  .navbar
  .container-fluid
  .navbar-toggler:hover {
  background-color: rgba(0, 0, 0, 0.3);
}
.feature-container .feature-content .navbar .container-fluid .navbar-logo {
  width: 200px;
  height: 50px;
}

